$NetBSD: CHANGES,v 1.519 2002/11/14 04:14:59 itojun Exp $

Changes to the packages collection and infrastructure in 2002:

	Updated sablotron to 0.71 [jlam 2002-01-01]
	Added php4-xslt-4.1.0 [jlam 2002-01-01]
	Updated courier-maildirmake to 0.2 [jlam 2002-01-01]
	Updated cpuflags to 0.16 [abs 2002-01-01]
	Updated port2pkg to 1.10 [wiz 2002-01-01]
	Updated uae to 0.8.20 [kristerw 2002-01-01]
	Updated pine to 4.43nb1 [hubertf 2002-01-02]
	Updated mutt to 1.2.5.1 [tron 2002-01-02]
	Updated mutt-devel to 1.3.25 [tron 2002-01-02]
	Updated cue to 20010917nb1 [hubertf 2002-01-02]
	Updated libao to 0.8.2 [lukem 2002-01-02]
	Updated libogg to 1.0rc3 [lukem 2002-01-02]
	Updated libvorbis to 1.0rc3 [lukem 2002-01-02]
	Updated vorbis-tools to 1.0rc3 [lukem 2002-01-02]
	Updated courier-maildirmake to 0.3 [jlam 2002-01-02]
	Added ttf2pt1-3.4.0 [reinoud 2002-01-02]
	Updated courier-imap to 1.4.0 [jlam 2002-01-02]
	Added courier-imap-ldap-1.4.0 [jlam 2002-01-02]
	Updated sqlite to 2.2.0 [reinoud 2002-01-02]
	Updated xmame to 0.56.2 [kristerw 2002-01-03]
	Updated xmess to 0.56.2 [kristerw 2002-01-03]
	Added xjdic-2.3 [hubertf 2002-01-03]
	Updated SDL to 1.2.2nb1 [hubertf 2002-01-03]
	Updated pload to 0.9.4nb2 [hubertf 2002-01-03]
	Updated libusb to 0.1.4 [martti 2002-01-03]
	Added tct-1.0.9 [agc 2002-01-03]
	Updated pkglint to 3.21 [abs 2002-01-03]
	Updated rconfig to 0.06 [abs 2002-01-03]
	Updated cpuflags to 0.17 [abs 2002-01-03]
	Added autoconf-devel-2.52 [agc 2002-01-03]
	Updated autotrace to 0.29 [wiz 2002-01-03]
	Updated ruby-rdtool-0.6.10nb1 [taca 2002-01-03]
	Updated keychain to 1.8 [martti 2002-01-03]
	Updated ups-nut to 0.45.3 [lukem 2002-01-04]
	Updated ups-nut-cgi to 0.45.3 [lukem 2002-01-04]
	Updated ruby-bsearch to 1.4 [taca 2002-01-03]
	Updated gcc to 2.95.3 [tron 2002-01-03]
	Updated ruby-rttool to 0.1.7 [taca 2002-01-04]
	Updated ruby-unit to 0.5.2 [taca 2002-01-04]
	Added fluxbox-0.1.5 [jmcneill 2002-01-03]
	Updated gcc-ssp to 2.95.3 [kent 2002-01-04]