@@ -1,4 +1,4 @@
-$NetBSD: distinfo,v 1.9 2002/11/11 05:28:07 schmonz Exp $
+$NetBSD: distinfo,v 1.10 2002/11/14 04:25:31 kim Exp $
 
-SHA1 (tmda-0.63.tgz) = b8fe0357111d21a786148fada1a51e50dc7aa33d
-Size (tmda-0.63.tgz) = 230959 bytes
+SHA1 (tmda-0.64.tgz) = 796482c04f49e86d90baa1ce7cd312158250b777
+Size (tmda-0.64.tgz) = 234295 bytes
