@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.519 2002/11/14 04:14:59 itojun Exp $
+$NetBSD: CHANGES,v 1.520 2002/11/14 04:27:49 kim Exp $
 
 Changes to the packages collection and infrastructure in 2002:
 
@@ -3609,3 +3609,4 @@ Changes to the packages collection and infrastructure in 2002:
 	Added i2cbd-2.0_BETA0 [hubertf 2002-11-14]
 	Updated bind4 to 4.9.10nb1 [itojun 2002-11-14]
 	Updated bind8 to 8.3.3nb1 [itojun 2002-11-14]
+	Updated tmda to 0.64 [kim 2002-11-14]
